Added random page functionality

--- a/edit.html
+++ b/edit.html
@@ -17,7 +17,7 @@
         <li><h3>menu</h3></li>
         <li><a href="/">Home</a></li>
         <li><a href="/new">New Page</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="/random">Random Page</a></li>
     </ul>
 </div>
 <h1>Go Wiki</h1>
