Cleaned up code and bug fixes

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="/static/style.css" type="text/css">
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Go Wiki</title>
+	<title>Home | Go Wiki</title>
 </head>
 <body>
 	<div id="menu-bar">
@@ -23,7 +23,7 @@
 	<h1>Go Wiki</h1>
 	<h3>A wiki with a backend written in Go</h3>
 	<form action="/" method="POST">
-		SEARCH:<input type="text" name="search" value="">
+		<input type="text" name="search" value="">
 		<input type="submit">
 	</form>
 	<div class="menu-bg" id="menu-bg"></div>
