Started login system

--- a/new.html
+++ b/new.html
@@ -23,7 +23,7 @@
 	<h1>Go Wiki</h1>
 	<h3>Create a New Page</h3>
 	<form action="/new" method="POST">
-		Page:<input type="text" name="pagename">
+		Page:<input type="search" name="pagename">
 		<input type="submit" value="Create Page">
 	</form>
 	<div class="menu-bg" id="menu-bg"></div>
