Continued login system with some auth

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="/static/style.css" type="text/css">
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Go Wiki | New Page</title>
+	<title>Go Wiki | Login</title>
 </head>
 <body>
 	<div id="menu-bar">
