--- a/view.html
+++ b/view.html
@@ -26,6 +26,7 @@
         <a href="/edit/{{.Title}}" class="button">Edit</a>
 
         <div>{{printf "%s" .Body}}</div>
+        <footer>Edited by {{.User}}</footer>
         <script src="/static/script.js"></script> 
 </body>
 </html>
