--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
 		</ul>
 	</div>
 	<h1>Go Wiki</h1>
+	<h3>logged in as {{.Name}}</h3>
 	<h3>A wiki with a backend written in Go</h3>
 	<form action="/" method="POST">
 		<input type="text" name="search" value="">
